# poetry2conda

./: .bumpversion.cfg  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml
.github/workflows/: unit-tests.yml
poetry2conda/: __init__.py  _version.py  convert.py
tests/: test_example.py
