[tool.poetry]
name = "poetry2conda"
version = "0.1.0"
description = "Convert pyproject.toml to environment.yaml"
authors = ["David Ojeda <david.ojeda@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.0"
semantic_version = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pyyaml = "^5.3.1"
pytest-mock = "^3.0.0"
coverage = "^5.1"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
poetry2conda = "poetry2conda.convert:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
