[tool.poetry]
name = "poetry2conda"
# Note the version managed by bump2version.
# Do not change it manually here, use bump2version to change it.
version = "0.0.1"
description = "Convert pyproject.toml to environment.yaml"
authors = ["David Ojeda <david.ojeda@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/dojeda/poetry2conda"
repository = "https://github.com/dojeda/poetry2conda"
keywords = ["poetry", "anaconda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.0"
semantic_version = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pyyaml = "^5.3.1"
pytest-mock = "^3.0.0"
coverage = "^5.1"
pytest-cov = "^2.8.1"
black = "^19.10b0"

[tool.poetry.scripts]
poetry2conda = "poetry2conda.convert:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
